# gable_simulation

./: Cargo.toml  README.md  perfect_solution_simulation.txt  simulation_9_04_24.txt
src/: gable_simulation.rs  lib.rs  structures.rs
