[package]
name = "gable-simulation"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
utils = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
scrypto = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
native-sdk = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
transaction = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
radix-engine = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
radix-engine-common = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
substate-store-queries = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
radix-engine-derive = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
substate-store-interface = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
radix-engine-interface = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
substate-store-impls= { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping", features = ["rocksdb"] }
scrypto-test = { git = "https://github.com/hknio/radixdlt-scrypto", branch = "leadger-simulation-without-bootstrapping" }
extend = { version = "1.2.0" }
rand = "0.8.5"
csv = "1.3.0"

[[bin]]
name = "simulation"
path = "bin/simulation.rs"

[profile.release]
debug = true
